完成电影详细页面的开发

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,9 @@
         <activity
             android:name=".ui.Top250MovieActivity"
             android:theme="@style/MovieTheme.NoActionBar"/>
+        <activity
+            android:name=".ui.MovieDetailActivity"
+            android:theme="@style/MovieTheme.NoActionBar"/>
     </application>
 
 </manifest>
