--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,4 +38,5 @@ dependencies {
     compile 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
     compile 'com.github.bumptech.glide:glide:4.5.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.5.0'
+    implementation 'com.android.support:palette-v7:27.0.2'
 }
